--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="queries.css">
+    <link rel="stylesheet" href="queries.css" />
     <link rel="stylesheet" href="aos.css" />
     <link rel="stylesheet" href="Counter.css" />
-    <link rel="stylesheet" href="animation.css">
+    <link rel="stylesheet" href="animation.css" />
 
     <link
       rel="icon"
@@ -29,13 +29,13 @@
   </head>
   <body>
     <!-- home   -->
-    <div class="home">
-      <header class="header container">
+    <div class="home ">
+      <header class="header ">
         <img src="./images/logo.svg" alt="" />
         <a href="" class="btn-primary">Try It Free</a>
       </header>
       <!-- hero -->
-      <section class="hero container">
+      <section class="hero ">
         <h1 data-aos="fade-down">Build The Community Your Fans Will Love</h1>
         <p data-aos="fade-down">
           Huddle re-imagines the way we build communities. You have a voice, but
@@ -52,7 +52,7 @@
         />
       </section>
       <!-- analystics -->
-      <section class="analystics container">
+      <section class="analystics ">
         <div class="wrapper">
           <span data-aos="zoom-in" class="box first-number"></span>
           <span data-aos="zoom-in" class="box second-number">.</span>
@@ -76,7 +76,7 @@
             d="M0,256L60,224C120,192,240,128,360,112C480,96,600,128,720,170.7C840,213,960,267,1080,282.7C1200,299,1320,277,1380,266.7L1440,256L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"
           ></path>
         </svg>
-        <div class="user user-black">
+        <div class="user user-black ">
           <div data-aos="zoom-in-right" class="content ">
             <h1 class="headings-secondary">Grow Together</h1>
             <p>
