--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="aos.css" />
     <link rel="stylesheet" href="Counter.css" />
     <link rel="stylesheet" href="animation.css" />
-
+    <script
+      src="https://kit.fontawesome.com/039ffe8ca9.js"
+      crossorigin="anonymous"
+    ></script>
     <link
       rel="icon"
       type="image/png"
@@ -53,14 +56,12 @@
       </section>
       <!-- analystics -->
       <section class="analystics ">
-        <div class="wrapper">
-          <span data-aos="zoom-in" class="box first-number"></span>
-          <span data-aos="zoom-in" class="box second-number">.</span>
-          <p>Communiities Formed</p>
+        <div class="card">
+          <p data-aos="fade-right"><span>1.4k+</span></p>
+          <p>Communities Formed</p>
         </div>
-        <div class="wrapper">
-          <span data-aos="zoom-in" class="box first-number"></span>
-          <span data-aos="zoom-in" class="box second-number">.</span>
+        <div class="card">
+         <p data-aos="fade-left"><span>2.7m+</span></p> 
           <p>Messages Sent</p>
         </div>
       </section>
@@ -161,13 +162,18 @@
       <footer class="footer">
         <!-- about-us -->
         <div class="about-us">
-          <img src="./images/logo.svg" alt="" />
+          <img src="./images/logo.png" alt="" />
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua
           </p>
-          <p><i>Phone +1-543-123-4567</i></p>
-          <p><i>example@huddle.com</i></p>
+          <p><i class="fas fa-phone-alt"></i>&nbsp;&nbsp; Phone +1-543-123-4567</p>
+          <p><i class="fas fa-envelope"></i>&nbsp;&nbsp; example@huddle.com</p>
+          <div class="social">
+            <i class="fab fa-facebook"></i>
+            <i class="fab fa-google-plus-g"></i>
+            <i class="fab fa-twitter"></i>
+          </div>
         </div>
         <!-- news-letter -->
         <div class="news-letter ">
@@ -182,14 +188,15 @@
           </div>
         </div>
       </footer>
+      <div class="coded-by">
+        <p>
+          Challenge by
+          <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+            >Frontend Mentor</a
+          >. Coded by <a href="#">Medmourh Youssef</a>.
+        </p>
+      </div>
     </div>
-
-    <!-- <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer> -->
   </body>
   <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
   <script src="aos.js"></script>
